--- a/seminar_5/Seminar_5_orai_script_Rmd.Rmd
+++ b/seminar_5/Seminar_5_orai_script_Rmd.Rmd
@@ -49,21 +49,25 @@ gender_effect_on_height = 12
 
 
 treatment <- rep(c(1, 0), each = n_per_group)
-set.seed(68)
+set.seed(1)
 
 gender_num <- rbinom(n = n_per_group * 2, size = 1, prob = 0.7)
 gender <- NA
 gender[gender_num == 0] = "female"
 gender[gender_num == 1] = "male"
 
+set.seed(2)
 home_ownership <- sample(c("own", "rent", "friend"), n_per_group * 2, replace = T)
 
+set.seed(3)
 resilience <- rnorm(mean = resilience_mean, sd = resilience_sd, n = n_per_group*2)
 
+set.seed(6)
 anxiety_base <- rnorm(mean = base_anxiety_mean, sd = base_anxiety_sd, n = n_per_group*2)
 anxiety <- anxiety_base + treatment * treatment_effect + resilience * resilience_effect + gender_num * gender_effect
 participant_ID <- paste0("ID_", 1:(n_per_group*2))
 
+set.seed(5)
 height_base <- rnorm(mean = base_height_mean, sd = base_height_sd, n = n_per_group*2)
 height <- height_base + gender_num * gender_effect_on_height
 
@@ -93,6 +97,8 @@ data = data %>%
   mutate(home_ownership = factor(home_ownership))
 
 data
+
+cor(height_base, resilience)
 
 ```
 
@@ -162,7 +168,7 @@ Egy egyszeru pelda: az a sejtesem, hogy egy penzerme cinkelt, megpedig ugy hogy 
 
 Tegyuk fel hogy 10-szer feldobjuk az ermet, es 9-szer fejet dobunk. Mekkora a valoszinusege, hogy az erme cinkelt? Ezt nem tudjuk megmondani. Tobbek kozott azert sem mert nem tudjuk, mennyire lehet cinkelve. Viszont azt meg tudjuk mondani, hogy mekkora a valoszinusege, hogy ezt az eredmenyt kapnank, ha az erme **NINCS** cinkelve.
 
-Annak a valoszinusege, hogy legalabb 9-szer (vagy tobbszor) fejet dobok 10 dobasbol egy nem cinkelt ermevel, p = 0.0107 (nagyjabol 1%). 
+Annak a valoszinusege, hogy legalabb 9-szer (vagy tobbszor) fejet dobok 10 dobasbol egy nem cinkelt ermevel, p = 0.0107 (nagyjabol 1%). (Ezt a kod reszt nem fontos meg megerteni, a lenyege hogy a pbinom() funkcioval kiszamoltuk a valoszinuseget, hogy 10 feldobasbol legalabb 9 fej lesz).
 
 ```{r coin flips probability}
 
@@ -176,15 +182,13 @@ probability_of_result
 ```
 
 
-Ez a valoszinuseg maskepp leforditva azt jelenti, hogy ha ugyan ezt a kiserletet 100 szor megismetelnenk (mindegyikben 10 dobassal), akkor a 100 kiserletbol csak atlagosan 1-szer varnanak, hogy 9 vagy tobb fejet kapjunk. 
+Ez a valoszinuseg maskepp leforditva azt jelenti, hogy ha ugyan ezt a kiserletet 100 szor megismetelnenk (mindegyikben 10 feldobassal), akkor a 100 kiserletbol csak atlagosan 1-szer varnanak, hogy 9 vagy tobb fejet kapjunk. 
 
-Ezt le is ellenorizhetjuk, ha randomizalunk mondjuk 10.000 hasonlo kiserletet az rbinom() funkcioval. Az abran lathato hogy csak a kiserletek igen kis szazalekaban kaptunk 9 vagy tobb "sikert". 
+Ezt le is ellenorizhetjuk, ha randomizalunk mondjuk 10.000 hasonlo kiserletet az rbinom() funkcioval. Az abran lathato hogy csak a kiserletek igen kis szazalekaban kaptunk 9 vagy tobb "sikert". (Ezt a kodreszt sem fontos megerteni, a lenyege hogy az rbinom() funkcioval 10000-szer szimulaltuk, hogy egymas utan 10-szer feldobtunk egy ermet (vagyis hogy veletlenszeruen valasztottunk egy szamot 0 es 1 kozul.), ez utan ezt abrazoltuk a ggplot-al)
 
 ```{r coin flips null probability}
 successes = rbinom(n = 10000, size = 10, prob = 0.5)
 random_flips = data.frame(successes)
-
-library(ggplot2)
 
 ggplot(data = random_flips) +
   aes(x = successes) +
@@ -209,6 +213,10 @@ A megfigyeles valoszinuseget a null-hipotezis helyesseget feltetelezve altalaban
 - korrelacios teszt
 - t-teszt
 
+
+**INNENTOL KEZDVE AZ OSSZES KOD MEGERTESE FONTOS**
+
+
 ### binomialis teszt
 
 A fenti hipotezist pl. tesztelhetjuk a **binomialis teszttel**, aminek R-ben binom.test() a funkcioja. Az x helyere a megfigyelt "celmegfigyelesek" vagy "sikerek" szamat (a mi esetunkben a fejek szamat), az n helyere az osszes megfigyeles szamat, a p helyere pedig a null-hipotezes helyesseget feltetelezve a "celmegfigyelesek" eleresenek valoszinuseget kell beirni. Ezt valoszinusegkent kell megadni, ami 0 es 1 kozotti szam (0 = 0% esely, 1 = 100% esely)
@@ -227,7 +235,8 @@ Ennek a tesztnek az eredmenye a kovetkezot mutat:
 - sample estimates: A "siker" ("celmegfigyeles", a mi esetunkben a fej) valoszinusegenek becsult merteke a populacioban a megfigyelt valoszinuseg alapjan. Ez egy pontbecsles, ami mindig megegyezik a megfigyelt valoszinuseggel.
 
 
-Ennek a binomialis tesztnek az eredmenyet igy irhatjuk le:
+Az eredmenyt igy irhatjuk le:
+
 "A kutatasunkban 9 fejet figyeltunk meg 10 penzfeldobasbol. Ez alapjan ugy iteljuk, hogy annak a valoszinusege, hogy fejet dobunk az ermevel szignifikansan tobb mint p = 0.5. A fej dobas valoszinusege p =  0.9 volt a mintaban (95% CI = 0.61, 1)."
 
 *________________________________*
@@ -280,7 +289,7 @@ chisq.test(ownership_health_status_table)
 
 ```
 
-Ennek a tesztnek az eredmenyet igy irhatjuk le:
+Az eredmenyt igy irhatjuk le:
 
 "Nem volt szignifikans elteres abban, hogy a kulonbozo lakhatasi csoportokban (baratnal, sajat lakasban, vagy berlemenyben lakok) milyen aranyban voltak azok akik meggyogyultak a kutatas vegere (X^2 = `r round(chisq.test(ownership_health_status_table)$statistic, 2)`, df = `r chisq.test(ownership_health_status_table)$parameter`, p = `r round(chisq.test(ownership_health_status_table)$p.value, 3)`)."
 
@@ -345,7 +354,7 @@ mean_dif
 
 ```
 
-Ezt az eredmenyt ugy irhatjuk le hogy:
+Az eredmenyt igy irhatjuk le:
 
 "A ferfiak es nok szignifikansan kulonboztek a egymastol a szorongas szintjukben (t = `r round(t_test_results$statistic, 2)`, df = `r round(t_test_results$parameter, 2)`, p = `r round(t_test_results$p.value, 3)`. A csoportok szorongas szintjenek atlaga es szorasa a kovetkezo volt: "nok: `r round(summary$mean[1], 2)`(`r round(summary$sd[1], 2)`), ferfiak: `r round(summary$mean[2], 2)`(`r round(summary$sd[2], 2)`). A nok atlagosan `r round(mean_dif, 2)` ponttal voltak szorongobbak (95% CI = `r round(t_test_results$conf.int[1], 2)`, `r round(t_test_results$conf.int[2], 2)`)."
 
@@ -360,8 +369,9 @@ summary(ANOVA_result)
 
 ```
 
-Ezt az eredmenyt igy irnank le:
-"A lakhatasi csoportonk szerint nem volt szignifikans kulonsbeg a szorongas atlagos szintjeben (F (`r round(summary(ANOVA_result)[[1]]$Df[1],2)` ,`r round(summary(ANOVA_result)[[1]]$Df[2],2)`) = `r round(summary(ANOVA_result)[[1]]$F[1],2)`, p = `r round(summary(ANOVA_result)[[1]][1,4],3)`). A szorongas atlagat es szorasat az egyes csoportok szerinti bontasban lasd az 1. tablazatban"
+Az eredmenyt igy irhatjuk le:
+
+"A lakhatasi csoportonk szerint nem volt szignifikans kulonsbeg a szorongas atlagos szintjeben (F (`r round(summary(ANOVA_result)[[1]]$Df[1],2)` ,`r round(summary(ANOVA_result)[[1]]$Df[2],2)`) = `r round(summary(ANOVA_result)[[1]]$F[1],2)`, p = `r round(summary(ANOVA_result)[[1]][1,5],3)`). A szorongas atlagat es szorasat az egyes csoportok szerinti bontasban lasd az 1. tablazatban"
 
 Alabb lathato, hogyan produkalnank a megfelelo tablazatot a szorongas atlagaval home_ownership csoportok szerint.
 
@@ -392,7 +402,7 @@ t_test_results_one_sided
 
 ```
 
-Ezt az eredmenyt a fentiekhez hasonloan igy irnank le:
+Az eredmenyt igy irhatjuk le:
 
 "A ferfiak es nok szignifikansan kulonboztek a egymastol a szorongas szintjukben (t = `r round(t_test_results_one_sided$statistic, 2)`, df = `r round(t_test_results_one_sided$parameter, 2)`, p = `r round(t_test_results_one_sided$p.value, 3)`. A csoportok szorongas szintjenek atlaga es szorasa a kovetkezo volt: "nok: `r round(summary$mean[1], 2)`(`r round(summary$sd[1], 2)`), ferfiak: `r round(summary$mean[2], 2)`(`r round(summary$sd[2], 2)`). A nok atlagosan `r round(mean_dif, 2)` ponttal voltak szorongobbak (95% CI = `r round(t_test_results_one_sided$conf.int[1], 2)`, inf)."
 
@@ -460,12 +470,13 @@ correlation_result
 
 ```
 
-Ennek a tesztnek az eredmenyet a kovetkezokeppen irhatjuk le:
+Az eredmenyt igy irhatjuk le:
+
 "A reziliencia es a magassag kozott nem talaltunk szignifikans egyuttjarast (r = `r round(correlation_result$estimate, 2)`, 95% CI = `r round(correlation_result$conf.int[1], 2)`, `r round(correlation_result$conf.int[2], 2)`, df = `r round(correlation_result$parameter, 2)`, p = `r round(correlation_result$p.value, 3)`)"
 
 Hasonloan a t-teszthez, a korrelacios teszt eseteben is erdemes egyoldalu tesztet hasznalni amikor a hipotezisunk megmondja a kapcsolat iranyat is, nem csak azt, hogy van kapcsolat a ket valtozo kozott.
 
-Peldaul feltetelezzuk, hogy a ket valtozo kozotti kapcsolat pozitiv lesz. Vagyis egy ember minel magasabb, annal magasabb a rezilienciaja. Ezt ugy adhatjuk meg a statisztikai teszt specifikaciojakor, hogy a formulahoz hozzatesszuk az alternative = "greater" parametert. Ha az eredmenyt osszehasonlitjuk az elozo korrelacios teszt eredmenyevel, lathatjuk, hogy a p-ertek magasabb lett (hiszen a kapcsolat iranya a mintankban valojaban kisse negativ volt). A konfidencia intervallumnak itt is csak az also hatara erdekes, a felso hatara a leeheto legmagasabb erteket veszi fel ilyenkor, ami a korrelacional 1.
+Peldaul feltetelezzuk, hogy a ket valtozo kozotti kapcsolat pozitiv lesz. Vagyis egy ember minel magasabb, annal magasabb a rezilienciaja. Ezt ugy adhatjuk meg a statisztikai teszt specifikaciojakor, hogy a formulahoz hozzatesszuk az alternative = "greater" parametert. Ha az eredmenyt osszehasonlitjuk az elozo korrelacios teszt eredmenyevel, lathatjuk, hogy a p-ertek is megvalozott. A konfidencia intervallumnak itt is csak az also hatara erdekes, a felso hatara a leeheto legmagasabb erteket veszi fel ilyenkor, ami a korrelacional 1.
 
 ```{r correlation test one sided greater}
 
